# -

./: Chapter01_기초과제_박민호.ipynb  4일차_파이썬14_16화_박민호.ipynb  5일차_파이썬17_20화_박민호.ipynb  Chapter04_기초과제.ipynb  Chapter05_08_기초과제_박민호.ipynb  Chapter09_13_기초과제_박민호.ipynb  Mini Project_설문조사 양식 만들기.html  Mini_Project_BE_02_박민호.ipynb  README.md  profile(수정본).css  profile(수정본).html  profile.html  python_test(20231228).ipynb  간단한소개화면만들기.css  간단한소개화면만들기.html  박스꾸며보기.html  채팅방만들기.css  채팅방만들기.html  태그사용해보기.html  회원가입양식만들기.html
파이썬과제/: Chapter01_기초과제_박민호.ipynb
01-파이썬과제/: 4일차_파이썬14_16화_박민호.ipynb  Chapter05_08_기초과제_박민호.ipynb  Chapter09_13_기초과제_박민호.ipynb
20240214-WebScrapingMiniProject/: 20240213-steam.ipynb  20240214-steam.ipynb  readme.md  readme.txt
AWS/: 03-EC2.md  04-ElasticIP.md  05-EBS.md  06-ELB.md  07-ASG.md  08-RDS.md  09-S3.md  10-S3(Web).md  11-CloudFront.md  12-Route53.md  13-IAm.md  14-CLI.md
Admin 페이지 프론트단 제작 프로젝트/: 20240124-adminpage.html  readme.md
Amazon Web Service/: 03 - EC2.md  AWS.md  Cloud & AWS.md  Cloud.md
Crawling/: 20240130 - melon_m.py
Data Analysis/: 01-Numpy.ipynb  02-Pandas.ipynb  03-Matplotlib.ipynb  04-MachineLearning.ipynb  240313-submission.csv  Readme.md
DataBase/: 20240202-yes24크롤링.ipynb  (+5 more)
Django/2일차과제/: db.sqlite3  pyproject.toml
Django/2일차과제/boards/migrations/: 0003_board_user.py
Django/2일차과제/common/: models.py
Django/2일차과제/config/: settings.py
Django/2일차과제/feeds/: views.py
Django/2일차과제/users/: models.py
Flask/: app.py  (+1 more)
(+120 files in other folders)
