[tool.poetry]
name = "django-study"
version = "0.1.0"
description = "python django project"
authors = ["kyoorochi <pmh0521@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
